GWT tests are now made easy by using a new lib, updated tests